Factory works on simple case